examples/semantics/errors/error24.grace
fun error24 () : int
{
	puti(999);
}
